# aes_encryption_HLS

Codigo/DIseno/: AES_accel.cpp
Codigo/Test/: AESfunctions.cpp  AESfunctions.h  AESkeys.h  AEStables.h
Proyecto_completo/AES_hw/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
Proyecto_completo/AES_hw/.apc/: autopilot.apfmapping
Proyecto_completo/AES_hw/Debug/: makefile  sources.mk
Proyecto_completo/AES_hw/Debug/DIseno/: AES_accel.d  subdir.mk
Proyecto_completo/AES_hw/Debug/Test/: AESfunctions.d  subdir.mk  test_AES_full.d
Proyecto_completo/AES_hw/Debug/source/: AES_accel.d  subdir.mk
Proyecto_completo/AES_hw/Debug/testbench/: AESfunctions.d  subdir.mk  test_AES_full.d
Proyecto_completo/AES_hw/Test/: test_AES_full.cpp
Proyecto_completo/AES_hw/solution1/: directives.tcl  script.tcl  solution1.aps  solution1.directive  solution1_data.json
Proyecto_completo/AES_hw/solution1/.autopilot/: .automg_exit  .autopilot_exit  .autosim_exit
Proyecto_completo/AES_hw/solution1/.autopilot/db/: .message_cosim.xml  .message_impl.xml  .message_syn.xml  (+125 more)
Proyecto_completo/AES_hw/solution1/.debug/: AES_Encrypt_axi.protoinst  AES_Full_axi.protoinst
Proyecto_completo/AES_hw/solution1/impl/verilog/project.gen/sources_1/bd/bd_0/ip/bd_0_hls_inst_0/drivers/AES_Encrypt_axi_v1_0/src/: CMakeLists.txt  Makefile
Proyecto_completo/AES_hw/solution1/sim/: .autosim.status
syn/report/: AES_Encrypt_axi_csynth.rpt  AddRoundKey_csynth.rpt  KeyExpansion_csynth.rpt  MixColumns_csynth.rpt  ShiftRows_csynth.rpt  SubBytes_csynth.rpt  csynth.rpt  csynth_design_size.rpt
(+181 files in other folders)
